src/objects/Wish_Expense_Transaction_Code__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wish_Expense_Type__c</fullName>
        <label>Wish Expense Type</label>
        <referenceTo>Wish_Expense_Type__c</referenceTo>
        <relationshipLabel>Wish Expense Transaction Codes</relationshipLabel>
        <relationshipName>Wish_Expense_Transaction_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Wish Expense Transaction Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Wish_Expense_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Migration</fullName>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Wish_Expense_Type__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>iuser</value>
        </filters>
        <label>Migration</label>
    </listViews>
    <nameField>
        <label>Wish Expense Transaction Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wish Expense Transaction Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>